remove train weights

--- a/Segment_BatchMode_ProcessMeanFiles_Ver3.ipynb
+++ b/Segment_BatchMode_ProcessMeanFiles_Ver3.ipynb
@@ -150,18 +150,18 @@
     "        RPN_NMS_THRESHOLD = 0.7\n",
     "        # define the folder path to data for prediction\n",
     "        global data_dir\n",
-    "        all_files = []\n",
-    "        sub_directory = []\n",
-    "        for root, dirs, files in os.walk(data_dir):\n",
-    "            for file in files:\n",
-    "                relativePath = os.path.relpath(root, data_dir)\n",
-    "                if relativePath == \".\":\n",
-    "                    relativePath = \"\"\n",
-    "                all_files.append(\n",
-    "                    (relativePath.count(os.path.sep), relativePath, file))\n",
-    "        all_files.sort(reverse=True)\n",
-    "        for (count, folder), files in groupby(all_files, itemgetter(0, 1)):\n",
-    "            sub_directory.append(folder)"
+    "#         all_files = []\n",
+    "#         sub_directory = []\n",
+    "#         for root, dirs, files in os.walk(data_dir):\n",
+    "#             for file in files:\n",
+    "#                 relativePath = os.path.relpath(root, data_dir)\n",
+    "#                 if relativePath == \".\":\n",
+    "#                     relativePath = \"\"\n",
+    "#                 all_files.append(\n",
+    "#                     (relativePath.count(os.path.sep), relativePath, file))\n",
+    "#         all_files.sort(reverse=True)\n",
+    "#         for (count, folder), files in groupby(all_files, itemgetter(0, 1)):\n",
+    "#             sub_directory.append(folder)"
    ]
   },
   {
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "imgpath = \"/home/mestalbet/PythonScripts/Results_LiorImages/inference/\"\n",
     "predict_instance_json = \"/home/mestalbet/bucket/PythonScripts/submit_data/inputs.json\"\n",
-    "bucketpath = \"gs://segproj/PythonScripts/Results_LiorImages/inference/\"\n",
+    "# bucketpath = \"gs://segproj/PythonScripts/Results_LiorImages/inference/\"\n",
     "os.system(\"rm %s\" % (predict_instance_json))\n",
     "config=CellInferenceConfig()\n",
     "model = modellib.MaskRCNN(mode=\"inference\", config=config, model_dir=data_dir)\n",
