--- a/Segment_BatchMode_ProcessMeanFiles_Ver4.ipynb
+++ b/Segment_BatchMode_ProcessMeanFiles_Ver4.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/mestalbet/anaconda3/envs/segproj/lib/python3.6/site-packages/tensorflow/python/ops/sparse_ops.py:1165: sparse_to_dense (from tensorflow.python.ops.sparse_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Create a `tf.sparse.SparseTensor` and use `tf.sparse.to_dense` instead.\n"
+     ]
+    }
+   ],
    "source": [
     "imgpath = \"/home/mestalbet/PythonScripts/Results_LiorImages/inference/\"\n",
     "output_json = \"/home/mestalbet/bucket/PythonScripts/submit_data/inputs.json\"\n",
