added function to process pree-made projection images and changed json creation to local with copy to gs

--- a/Segment_BatchMode_ProcessMeanFiles_Ver5.ipynb
+++ b/Segment_BatchMode_ProcessMeanFiles_Ver5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-15T13:52:51.949187Z",
@@ -40,14 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# outpath = \"/home/mestalbet/PythonScripts/Results_LiorImages/\"\n",
-    "# data_dir = \"gs://segproj/PythonScripts/Results_LiorImages/inference/pngs/\"\n",
     "data_dir = \"/home/mestalbet/bucket/PythonScripts/Results_LiorImages/inference/pngs/\"\n",
-    "# data_dir = os.path.join(outpath,\"inference/\")\n",
     "model_path_1 = \"/home/mestalbet/Segment2P/TrainWeights/mask_rcnn_cell_0100.h5\"\n",
     "model_path_2 = \"/home/mestalbet/Segment2P/TrainWeights/mask_rcnn_cell_0198.h5\"\n",
     "model_path_3 = \"/home/mestalbet/Segment2P/TrainWeights/mask_rcnn_cell_0199.h5\"\n",
@@ -57,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,49 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Setup Path Iterator ######\n",
-    "\n",
-    "#Delete old models\n",
-    "# os.system(\"rm /home/mestalbet/bucket/PythonScripts/savedmodel/ver* -r\") \n",
-    "\n",
-    "dirs = os.listdir(\"/home/mestalbet/bucket/PythonScripts/savedmodel/\") \n",
-    "vernum = [int(d[-1]) for d in dirs]\n",
-    "if not vernum:\n",
-    "    vernum = 0\n",
-    "else:\n",
-    "    vernum = np.max(vernum)\n",
-    "model_dirpath = \"/home/mestalbet/bucket/PythonScripts/savedmodel/ver%d\" % (vernum+1)\n",
-    "if not os.path.exists(model_dirpath):\n",
-    "    os.makedirs(model_dirpath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### Save Each Model (different checkpoints)#####\n",
-    "for modelpath in model_list: \n",
-    "    # Load model\n",
-    "    K.clear_session()\n",
-    "    model = modellib.MaskRCNN(\n",
-    "        mode=\"inference\", config=CellInferenceConfig(), model_dir=data_dir)\n",
-    "    # Load weights from H5\n",
-    "    model.load_weights(modelpath, by_name=True)\n",
-    "    sess = K.get_session()\n",
-    "\n",
-    "    outputs = [output.name for output in model.keras_model.outputs]\n",
-    "    outs = {str(o):sess.graph.get_tensor_by_name(o) for o in outputs}\n",
-    "    output_names_all = [output.split(':')[0] for output in outputs]\n",
-    "    \n",
-    "    # Save model\n",
-    "    tf.saved_model.simple_save(sess,\n",
-    "                               model_dirpath+\"/savedmodel_%s/\" % modelpath.split('/')[-1][-7:-3],\n",
-    "                               inputs={'input_image':model.keras_model.inputs[0], \n",
-    "                                       'input_image_meta':model.keras_model.inputs[1],\n",
-    "                                       'input_anchors':model.keras_model.inputs[2]},\n",
-    "                               outputs=outs)"
+    "%%capture\n",
+    "# imgpath = \"/home/mestalbet/PythonScripts/Results_LiorImages\"\n",
+    "# alignedpath = [os.path.join(imgpath,f) for f in os.listdir(imgpath) if f.endswith('tif')]\n",
+    "# [cleanliorimage(a) for a in alignedpath]"
    ]
   },
   {
@@ -155,9 +113,10 @@
     }
    ],
    "source": [
-    "imgpath = \"/home/mestalbet/PythonScripts/Results_LiorImages/inference/\"\n",
-    "output_json = \"/home/mestalbet/bucket/PythonScripts/submit_data/inputs.json\"\n",
-    "os.system(\"rm %s\" % (output_json))\n",
+    "imgpath = \"/home/mestalbet/PythonScripts/Results_LiorImages\"\n",
+    "output_json = \"gs://segproj/PythonScripts/submit_data/inputs.json\"\n",
+    "imgpath = os.path.join(imgpath,'inference')\n",
+    "# os.system(\"rm %s\" % (output_json))\n",
     "createjson(imgpath, output_json, model_path_1, data_dir)"
    ]
   },
@@ -257,28 +216,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelpath = model_list[0]\n",
-    "K.clear_session()\n",
-    "model = modellib.MaskRCNN(mode=\"inference\", config=CellInferenceConfig(), model_dir=data_dir)\n",
+    "# modelpath = model_list[0]\n",
+    "# K.clear_session()\n",
+    "# model = modellib.MaskRCNN(mode=\"inference\", config=CellInferenceConfig(), model_dir=data_dir)\n",
     "\n",
-    "respath = \"/home/mestalbet/bucket/PythonScripts/cloud_output/\"\n",
-    "resfiles = glob(respath+'prediction.results*')\n",
-    "resfiles = [r for r in resfiles if getsize(r)>0]\n",
-    "ishape = (1024, 1024, 3)\n",
-    "mshape = (2048, 2048, 3)\n",
-    "window = np.array([   0,    0, 2048, 2048])\n",
-    "final_masks=[]\n",
-    "for resfile in resfiles:\n",
-    "    json_data=open(resfile).read()\n",
-    "    data = json.loads(json_data)\n",
-    "    _, _, _, fm = model.unmold_detections(\n",
-    "                                np.asarray(data['mrcnn_detection/Reshape_1:0']), \n",
-    "                                np.asarray(data['mrcnn_mask/Reshape_1:0']),\n",
-    "                                ishape, mshape, window)\n",
-    "    if (fm.shape[0]!=1024 or fm.shape[2]<1):\n",
-    "        print(\"Image Output Size Error\")\n",
-    "    else: \n",
-    "        final_masks.append(np.argmax(fm,2))   "
+    "# respath = \"/home/mestalbet/bucket/PythonScripts/cloud_output/\"\n",
+    "# resfiles = glob(respath+'prediction.results*')\n",
+    "# resfiles = [r for r in resfiles if getsize(r)>0]\n",
+    "# ishape = (1024, 1024, 3)\n",
+    "# mshape = (2048, 2048, 3)\n",
+    "# window = np.array([   0,    0, 2048, 2048])\n",
+    "# final_masks=[]\n",
+    "# for resfile in resfiles:\n",
+    "#     json_data=open(resfile).read()\n",
+    "#     data = json.loads(json_data)\n",
+    "#     _, _, _, fm = model.unmold_detections(\n",
+    "#                                 np.asarray(data['mrcnn_detection/Reshape_1:0']), \n",
+    "#                                 np.asarray(data['mrcnn_mask/Reshape_1:0']),\n",
+    "#                                 ishape, mshape, window)\n",
+    "#     if (fm.shape[0]!=1024 or fm.shape[2]<1):\n",
+    "#         print(\"Image Output Size Error\")\n",
+    "#     else: \n",
+    "#         final_masks.append(np.argmax(fm,2))   "
    ]
   },
   {
