--- a/Segment_BatchMode_ProcessMeanFiles_Ver3.ipynb
+++ b/Segment_BatchMode_ProcessMeanFiles_Ver3.ipynb
@@ -809,9 +809,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (segproj)",
+   "display_name": "conda_amazonei_tensorflow_p36",
    "language": "python",
-   "name": "segproj"
+   "name": "conda_amazonei_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -823,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   },
   "notify_time": "30",
   "toc": {
