--- a/Segment_BatchMode_ProcessMeanFiles_Ver5.ipynb
+++ b/Segment_BatchMode_ProcessMeanFiles_Ver5.ipynb
@@ -453,9 +453,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_amazonei_tensorflow_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -467,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   },
   "notify_time": "30",
   "toc": {
