fixed cropping algorithm. Added Usigacii and HELA data. Replaced crop with padding

--- a/TrainFromScratch_Example.ipynb
+++ b/TrainFromScratch_Example.ipynb
@@ -29,8 +29,8 @@
      "output_type": "stream",
      "text": [
       "arn:aws:iam::102554356212:role/service-role/AmazonSageMaker-ExecutionRole-20181129T100657\n",
-      "CPU times: user 1.54 s, sys: 640 ms, total: 2.18 s\n",
-      "Wall time: 967 ms\n"
+      "CPU times: user 1.6 s, sys: 790 ms, total: 2.39 s\n",
+      "Wall time: 6.1 s\n"
      ]
     }
    ],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,6 +667,9 @@
     "    proccessliorfiles(key)\n",
     "    proccessfigure8files(key)\n",
     "    proccessfig8preprocfiles(key)\n",
+    "    proccessusiigacifiles(key)\n",
+    "    proccesshelafiles(key)\n",
+    "    \n",
     "keys = [obj.key for obj in s3meadata.objects.all()]\n",
     "for key in keys:\n",
     "    t = threading.Thread(target = procfilepar, args=(key,)).start()\n",
@@ -685,11 +688,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/util/dtype.py:122: UserWarning: Possible precision loss when converting from uint16 to uint8\n",
+      "  .format(dtypeobj_in, dtypeobj_out))\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/util/dtype.py:122: UserWarning: Possible precision loss when converting from float64 to int16\n",
+      "  .format(dtypeobj_in, dtypeobj_out))\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set44_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n"
+     ]
+    }
+   ],
    "source": [
-    "   #still bugs here - sizes don't come out right. Some masks are 256 while images are 1024\n",
     "from math import floor\n",
     "import os\n",
     "\n",
@@ -729,7 +744,14 @@
     "    else:\n",
     "        print(best_box)\n",
     "        roi = imgray\n",
-    "    roi =  cv2.resize(roi, (256,256), interpolation = cv2.INTER_AREA)\n",
+    "    delta_w = 1024 - roi.shape[1]\n",
+    "    delta_h = 1024 - roi.shape[0]\n",
+    "    top, bottom = delta_h//2, delta_h-(delta_h//2)\n",
+    "    left, right = delta_w//2, delta_w-(delta_w//2)\n",
+    "    color = [0, 0, 0]\n",
+    "    roi = cv2.copyMakeBorder(roi, top, bottom, left, right, cv2.BORDER_CONSTANT,\n",
+    "    value=color)\n",
+    "#     roi =  cv2.resize(roi, (256,256), interpolation = cv2.INTER_AREA)\n",
     "    return(roi, best_box)\n",
     "\n",
     "def performcrop(key, bucket  = bucket, prefix = prefix ):\n",
@@ -745,8 +767,8 @@
     "        s3.meta.client.download_file(bucket, maskkey , masksavepath)\n",
     "    except:\n",
     "        try:\n",
-    "            s3.meta.client.delete_objects(bucket, key, imsavepath)\n",
-    "            s3.meta.client.delete_objects(bucket, maskkey , masksavepath)\n",
+    "            s3.meta.client.delete_objects(bucket, maskkey)\n",
+    "            s3.meta.client.delete_objects(bucket, key)\n",
     "        except:\n",
     "            pass\n",
     "        pass\n",
@@ -766,9 +788,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set7_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/util/dtype.py:122: UserWarning: Possible precision loss when converting from uint16 to uint8\n",
+      "  .format(dtypeobj_in, dtypeobj_out))\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/util/dtype.py:122: UserWarning: Possible precision loss when converting from float64 to int16\n",
+      "  .format(dtypeobj_in, dtypeobj_out))\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set5_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set9_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set8_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set46_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set43_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set47_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set6_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set45_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set48_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set49_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/home/ec2-user/anaconda3/envs/amazonei_mxnet_p36/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /tmp/usiigaci_set50_raw.png is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[744, 250, 763, 291]\n",
+      "[694, 243, 757, 541]\n",
+      "[744, 250, 763, 291]\n",
+      "[694, 243, 757, 541]\n",
+      "[235, 398, 334, 452]\n",
+      "[235, 398, 334, 452]\n",
+      "[-1, -1, -1, -1]\n",
+      "[-1, -1, -1, -1][888, 303, 933, 814]\n",
+      "\n",
+      "[888, 303, 933, 814]\n",
+      "[517, 759, 537, 776]\n",
+      "[517, 759, 537, 776]\n",
+      "[-1, -1, -1, -1]\n",
+      "[-1, -1, -1, -1]\n",
+      "[517, 759, 537, 776]\n",
+      "[517, 759, 537, 776]\n"
+     ]
+    }
+   ],
    "source": [
     "keys = [obj.key for obj in s3_resource.Bucket(name=bucket).objects.all() if ('jpg' in obj.key and prefix in obj.key)]\n",
     "for key in keys:\n",
@@ -777,8 +856,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete all files without a matching image-annotation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeunmatched(s3_resource = s3_resource, prefix = prefix, bucket = bucket):\n",
+    "    keys = [obj.key for obj in s3_resource.Bucket(name=bucket).objects.all()]\n",
+    "    imkeys = set([str(key).split('/')[-1] for key in keys if ('jpg' in key and prefix in key)])\n",
+    "    maskkeys = set([str(key).split('/')[-1].replace('png','jpg') for key in keys if ('png' in key and prefix in key)])\n",
+    "    todelete = [l.replace('jpg','png') for l in list(maskkeys-(imkeys&maskkeys))]+list(imkeys-(imkeys&maskkeys))\n",
+    "    remove = [key for key in keys if any([t in key for t in todelete])]\n",
+    "    [boto3.client('s3').delete_object(Bucket=bucket, Key=r) for r in remove]\n",
+    "removeunmatched()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,18 +942,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup hyperparameters \n",
-    "numtrain = len([obj.key for obj in s3meadata.objects.all() if ('train' in obj.key and 'jpg' in obj.key)])\n",
+    "s3traindata = s3_resource.Bucket(name=bucket)\n",
+    "numtrain = len([obj.key for obj in s3traindata.objects.all() if ('train/' in obj.key and 'jpg' in obj.key)])\n",
     "ss_model.set_hyperparameters(backbone='resnet-101', # This is the encoder. Other option is resnet-50\n",
     "                             algorithm='deeplab', # This is the decoder. Other option is 'psp' and 'deeplab'                             \n",
     "                             use_pretrained_model='False', # Use the pre-trained model.\n",
     "                             crop_size=240, # Size of image random crop.                             \n",
     "                             num_classes=2, # Background + cell \n",
-    "                             epochs=1000, # Number of epochs to run.\n",
+    "                             epochs=500, # Number of epochs to run.\n",
     "                             learning_rate=0.00058, momentum = 0.916, weight_decay = 0.000114,                           \n",
     "                             optimizer='adagrad', # Other options include 'adam', 'rmsprop', 'nag', 'adagrad'.\n",
     "                             lr_scheduler='poly', # Other options include 'cosine' and 'step'.                           \n",
@@ -872,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +1032,7 @@
     "                            objective_metric_name = 'validation:mIOU',\n",
     "                            hyperparameter_ranges = paramdict,\n",
     "                            max_jobs=300,\n",
-    "                            max_parallel_jobs=2)\n",
+    "                            max_parallel_jobs=5)\n",
     "\n",
     "tuner.fit(inputs=data_channels)\n",
     "# # bayes_metrics = sagemaker.HyperparameterTuningJobAnalytics(tuner._current_job_name).dataframe()\n",
