--- a/Train_From_Scratch_ver2.ipynb
+++ b/Train_From_Scratch_ver2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,12 +436,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from skimage import exposure,color, img_as_int, img_as_ubyte\n",
+    "from skimage.io import imread as pngread\n",
+    "from skimage.io import imsave as pngsave\n",
+    "from rolling_ball_filter import rolling_ball_filter\n",
+    "from skimage.morphology import disk\n",
+    "from skimage.filters.rank import autolevel,equalize\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import math\n",
+    "import os\n",
+    "\n",
+    "def preproc(img):\n",
+    "    selem = disk(60)\n",
+    "    try:\n",
+    "        img = autolevel(img, selem)\n",
+    "        img = exposure.adjust_gamma(img, 2)\n",
+    "        img = cv2.bilateralFilter(img,9,75,75)\n",
+    "    except:\n",
+    "        print(img.shape)\n",
+    "        pass\n",
+    "    return(img)\n",
+    "\n",
     "def createmultipleinputs(inputpath):\n",
-    "    # rename __orig\n",
-    "    # create __720_orig\n",
-    "    # create __1024_orig\n",
-    "    # create __720_prepoc\n",
-    "    # create __1024_prepoc"
+    "    # pad to square\n",
+    "    im = pngread(inputpath)\n",
+    "    if len(im.shape)==3:\n",
+    "        print('Images should be grayscale but had dimensions {} - automatically converted'.format(im.shape))\n",
+    "        im = np.sum(im,2)\n",
+    "    im = np.uint8(img_as_int(exposure.rescale_intensity(im, out_range=(0, 2**15 - 1))))\n",
+    "    imshape =im.shape\n",
+    "    edgediff = np.max(imshape)-np.min(imshape)\n",
+    "    orig = im\n",
+    "    if imshape[0]>imshape[1]:\n",
+    "        orig = cv2.copyMakeBorder(im, math.ceil(edgediff/2), math.ceil(edgediff/2), 0, 0, cv2.BORDER_CONSTANT,value=[0,0,0])\n",
+    "    if imshape[0]>imshape[1]:\n",
+    "        orig = cv2.copyMakeBorder(im, 0, 0, math.ceil(edgediff/2), math.ceil(edgediff/2), cv2.BORDER_CONSTANT,value=[0,0,0])\n",
+    "    \n",
+    "    # ==>resize to 1024\n",
+    "    im1024 = cv2.resize(orig, (1024,1024), interpolation = cv2.INTER_AREA)\n",
+    "    # ==>resize to 720\n",
+    "    im720 = cv2.resize(orig, (720,720), interpolation = cv2.INTER_AREA)\n",
+    "    # preprocess both\n",
+    "    im1024preproc = preproc(im1024)\n",
+    "    im720preproc = preproc(im720)\n",
+    "    return([orig, im1024preproc,im720preproc, im1024, im720])\n",
+    "\n",
+    "def populate_inputs(localpaths,batchid = ''):\n",
+    "    os.makedirs('/tmp/{}/'.format(batchid), exist_ok=True)\n",
+    "    imlabels = ['orig', 'im1024pp','im720pp','im1024','im720']\n",
+    "    for filepath in localpaths:\n",
+    "        resimages =  createmultipleinputs(filepath)\n",
+    "        for idx in range(0,len(resimages)):\n",
+    "            savepath = '/tmp/'+batchid+'/'+batchid+'_'+filepath.split('.')[0].split('/')[-1]+'__'+imlabels[idx]+'.jpg'\n",
+    "            pngsave(savepath,resimages[idx])\n",
+    "    os.system(\"aws s3 sync '/tmp/{}/' 's3://sagemaker-eu-west-1-102554356212/submissions/{}/' \".format(batchid,batchid))\n",
+    "inputpath = '/home/ec2-user/SageMaker/itzik_images_cropped/'        \n",
+    "files = os.listdir(inputpath)\n",
+    "files = [os.path.join(inputpath,f) for f in files if '.jpg' in f or '.png' in f or '.tif' in f]        \n",
+    "populate_inputs(files, batchid='itzik') "
    ]
   },
   {
@@ -453,21 +506,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:iam::102554356212:role/service-role/AmazonSageMaker-ExecutionRole-20181129T100657\n"
+     ]
+    }
+   ],
    "source": [
     "#Batch Job\n",
     "import sagemaker\n",
+    "import boto3\n",
     "from sagemaker import get_execution_role\n",
     "from IPython.core.debugger import set_trace\n",
     "role = get_execution_role()\n",
     "print(role)\n",
     "sess = sagemaker.Session()\n",
+    "bucket = sess.default_bucket()\n",
     "# model_id = \"fresh-train-trial-2019-07-28-08-49-49-994\"\n",
     "# model_id = \"semantic-segmentatio-190726-1931-032-e7d26e04\"\n",
     "\n",
-    "def runbatch(model_id):\n",
+    "def runbatch(model_id, batchid=''):\n",
     "    env = {'SAGEMAKER_MODEL_SERVER_TIMEOUT' : '3600' }\n",
     "    s3 = boto3.resource('s3')\n",
     "    s3_resource = boto3.resource('s3')\n",
@@ -482,7 +545,7 @@
     "        instance_type = 'ml.p3.2xlarge',\n",
     "        strategy = 'SingleRecord',\n",
     "        assemble_with = 'None',\n",
-    "        output_path = \"s3://sagemaker-eu-west-1-102554356212/results_\"+model_id,\n",
+    "        output_path = \"s3://sagemaker-eu-west-1-102554356212/results_{}/{}/\".format(model_id,batchid),\n",
     "        base_transform_job_name='inference-pipelines-batch',\n",
     "        sagemaker_session=sess,\n",
     "        accept = 'image/png',\n",
@@ -505,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +583,7 @@
     "from skimage.io import imread as pngread\n",
     "from skimage.io import imsave as pngsave\n",
     "\n",
-    "def batch2masks(model_id):\n",
+    "def batch2masks(model_id, batchid = ''):\n",
     "    s3 = boto3.resource('s3')\n",
     "    s3_resource = boto3.resource('s3')\n",
     "    s3results = s3_resource.Bucket(name='sagemaker-eu-west-1-102554356212')\n",
@@ -529,13 +592,13 @@
     "    for s3_object in keys:\n",
     "        if not s3_object.endswith(\"/\") and \"results_\"+model_id+\"/\" in s3_object and \"out\" in s3_object:\n",
     "                s3.meta.client.download_file('sagemaker-eu-west-1-102554356212', s3_object, '/tmp/tempfile.out')\n",
-    "                num_classes = 2\n",
     "                with open('/tmp/tempfile.out', 'rb') as image:\n",
     "                    img = image.read()    \n",
     "                    img = bytearray(img)\n",
     "                    mask = np.array(Image.open(io.BytesIO(img)))\n",
-    "                    pngsave('/tmp/results/'+'.'.join(s3_object.split('/')[-1].split('.')[:-1]), mask)\n",
-    "    os.system(\"aws s3 sync '/tmp/results/' 's3://sagemaker-eu-west-1-102554356212/results_{}/masks/' \".format(model_id))\n",
+    "                    pngsave('/home/ec2-user/SageMaker/tmp/'+'.'.join(s3_object.split('/')[-1].split('.')[:-1]), mask)\n",
+    "#     os.system(\"aws s3 sync '/tmp/results/{}/' 's3://sagemaker-eu-west-1-102554356212/results_{}/masks/' \".format(batchid,model_id))\n",
+    "\n",
     "batch2masks(\"fresh-train-trial-2019-07-28-08-49-49-994\")\n",
     "batch2masks(\"semantic-segmentatio-190726-1931-032-e7d26e04\")"
    ]
@@ -553,43 +616,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from processfiles import merge_multiple_detections\n",
+    "from processfiles import *\n",
     "from scipy import ndimage as ndi\n",
     "from skimage.feature import peak_local_max\n",
     "from skimage.segmentation import watershed\n",
     "from skimage.color import label2rgb\n",
-    "def merge_two_masks(maskpaths):\n",
-    "    masks = []\n",
-    "    for mpath in maskpaths:\n",
-    "        binarymask = pngread(mpath)\n",
-    "        num_classes = 2\n",
-    "        distance = ndi.distance_transform_edt(binarymask)\n",
-    "        local_maxi = peak_local_max(distance, labels=binarymask, footprint=np.ones((3, 3)), indices=False)\n",
-    "        markers = ndi.label(local_maxi)[0]\n",
-    "        masks.append(watershed(-distance, markers, mask=binarymask))\n",
-    "    mask = merge_multiple_detections(masks)\n",
-    "    return(mask)\n",
-    "\n",
-    "def merge_masks(s3_object, model_ids):\n",
-    "    os.makedirs('/tmp/results/merge/merged/', exist_ok=True)\n",
-    "    outpaths=[]\n",
-    "    ismodelresult = any([m for m in model_ids if m in s3_object])\n",
-    "    if ismodelresult:\n",
-    "        for model_id in model_ids:\n",
-    "            if not s3_object.endswith(\"/\") and \"masks\" in s3_object:\n",
-    "                    outpath = os.path.join('/tmp/results/merge/',model_id+'_'+s3_object.split('/')[-1])\n",
-    "                    s3.meta.client.download_file('sagemaker-eu-west-1-102554356212', s3_object, outpath)\n",
-    "                    outpaths.append(outpath)\n",
-    "        if outpaths:            \n",
-    "            mask = merge_two_masks(outpaths)\n",
-    "            pngsave(os.path.join('/tmp/results/merge/merged/','merged_'+s3_object.split('/')[-1]), np.uint8(mask>0))\n",
-    "\n",
+    "import threading\n",
     "s3 = boto3.resource('s3')\n",
     "s3_resource = boto3.resource('s3')\n",
     "s3results = s3_resource.Bucket(name='sagemaker-eu-west-1-102554356212')\n",
     "keys = [obj.key for obj in s3results.objects.all()]\n",
     "for s3_object in keys:\n",
-    "    t = threading.Thread(target = merge_masks, args=(s3_object,[\"fresh-train-trial-2019-07-28-08-49-49-994\",\"semantic-segmentatio-190726-1931-032-e7d26e04\"],)).start()\n",
+    "    t = threading.Thread(target = merge_masks, args=(s3_object,[\"fresh-train-trial-2019-07-28-08-49-49-994\",\"semantic-segmentatio-190726-1931-032-e7d26e04\"],batchid,)).start()\n",
     "!aws s3 sync '/tmp/results/merge/merged/' 's3://sagemaker-eu-west-1-102554356212/results_merged/masks/'"
    ]
   },
@@ -606,14 +644,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
-    "def merge_masks_diff_inputs(groupkeys):\n",
-    "    os.makedirs('/tmp/results/merge/input_merge/', exist_ok=True)\n",
+    "import pandas as pd\n",
+    "import boto3\n",
+    "from processfiles import *\n",
+    "from scipy import ndimage as ndi\n",
+    "import threading\n",
+    "\n",
+    "def merge_masks_diff_inputs(groupkeys, batchid = ''):\n",
+    "    os.makedirs('/tmp/results/'+batchid+'/', exist_ok=True)\n",
+    "    outpaths = []\n",
     "    for s3_object in groupkeys:\n",
-    "        if not s3_object.endswith(\"/\") and \"masks\" in s3_object:\n",
-    "                outpath = os.path.join('/tmp/results/'+s3_object.split('/')[-1])\n",
-    "                s3.meta.client.download_file('sagemaker-eu-west-1-102554356212', s3_object, outpath)\n",
-    "                outpaths.append(outpath)\n",
+    "        outpath = os.path.join('/tmp/results/'+s3_object.split('/')[-1])\n",
+    "        s3.meta.client.download_file('sagemaker-eu-west-1-102554356212', s3_object, outpath)\n",
+    "        pngsave(outpath,cv2.resize(pngread(outpath), (1024,1024), interpolation = cv2.INTER_AREA))\n",
+    "        outpaths.append(outpath)\n",
+    "    print(outpaths)\n",
     "    if outpaths:            \n",
     "        binarymask = merge_two_masks(outpaths)\n",
     "        num_classes = 2\n",
@@ -621,17 +666,72 @@
     "        local_maxi = peak_local_max(distance, labels=binarymask, footprint=np.ones((3, 3)), indices=False)\n",
     "        markers = ndi.label(local_maxi)[0]\n",
     "        mask = watershed(-distance, markers, mask=binarymask)\n",
-    "        pngsave(os.path.join('/tmp/results/merge/input_merge/','inputmerged_'+s3_object.split('/')[-1].split('__')[0]), np.uint8(mask>0))\n",
+    "        savepath = os.path.join('/tmp/results/'+batchid+'/inputmerged/',s3_object.split('/')[-1].split('__')[0].replace('merged_','inputmerged_')+'.jpg')\n",
+    "        pngsave(savepath, np.uint8(mask>0))\n",
+    "\n",
+    "batchid = 'itzik'\n",
+    "s3 = boto3.resource('s3')\n",
+    "s3_resource = boto3.resource('s3')\n",
+    "s3results = s3_resource.Bucket(name='sagemaker-eu-west-1-102554356212')\n",
+    "keys = [obj.key for obj in s3results.objects.all() if (not obj.key.endswith(\"/\")) and (\"merged\" in obj.key and batchid in obj.key)]\n",
+    "df = pd.DataFrame({'keys':keys,'orig_name':[k.split('/')[-1].split('__')[1].split('.jpg')[0] for k in keys]})\n",
+    "originals = np.unique(df['orig_name'].values)\n",
+    "for org in originals:\n",
+    "#      t = threading.Thread(target = merge_masks_diff_inputs, args=(df['keys'].loc[df['orig_name']==org].values,bid,)).start()\n",
+    "    merge_masks_diff_inputs(groupkeys = df['keys'].loc[df['orig_name']==org].values,batchid = batchid)\n",
+    "# !aws s3 sync '/tmp/results/merge/input_merged/' 's3://sagemaker-eu-west-1-102554356212/results_merged/input_merged_masks/'\n",
+    "# os.system(\"aws s3 sync '/tmp/results/{}/' 's3://sagemaker-eu-west-1-102554356212/results_merged/masks_{}/' \".format(batchid,batchid))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image Input Pipeline (for inference)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "def randomString(stringLength=10):\n",
+    "    \"\"\"Generate a random string of fixed length \"\"\"\n",
+    "    letters = string.ascii_lowercase\n",
+    "    return ''.join(random.choice(letters) for i in range(stringLength))\n",
+    "\n",
+    "# def submitimages(input_dir_path,batchid = randomString(10)):\n",
+    "\n",
+    "input_dir_path = \"/home/ec2-user/SageMaker/itzik_images_cropped/\"\n",
+    "for filename in os.listdir(input_dir_path): \n",
+    "    os.rename(filename,filename.replace('_','-'))\n",
     "\n",
     "s3 = boto3.resource('s3')\n",
     "s3_resource = boto3.resource('s3')\n",
     "s3results = s3_resource.Bucket(name='sagemaker-eu-west-1-102554356212')\n",
-    "keys = [obj.key for obj in s3results.objects.all()]\n",
-    "df = pd.DataFrame({'keys':keys,'orig_name':[k.split('/')[-1].split('__')[0] for k in keys]})\n",
-    "originals = np.unique(df['orig_name'])\n",
-    "for org in originals:\n",
-    "    merge_masks_diff_inputs(groupkeys = df['keys'].loc(['orig_name'==org]).values)\n",
-    "# !aws s3 sync '/tmp/results/merge/input_merged/' 's3://sagemaker-eu-west-1-102554356212/results_merged/input_merged_masks/'"
+    "#create different inputs\n",
+    "files = os.listdir(input_dir_path)\n",
+    "files = [os.path.join(inputpath,f) for f in files if '.jpg' in f or '.png' in f or '.tif' in f]        \n",
+    "populate_inputs(files, batchid = batchid) \n",
+    "#model1 - infer mask for all inputs\n",
+    "runbatch(\"semantic-segmentatio-190726-1931-032-e7d26e04\", batchid = batchid)\n",
+    "#model2 - infer mask for all inputs\n",
+    "runbatch(\"fresh-train-trial-2019-07-28-08-49-49-994\", batchid = batchid)\n",
+    "#merge masks from different models\n",
+    "keys = [obj.key for obj in s3results.objects.all() if batchid in obj.key]\n",
+    "for key in keys:\n",
+    "    t = threading.Thread(target = merge_masks, args=(key,[\"fresh-train-trial-2019-07-28-08-49-49-994\",\"semantic-segmentatio-190726-1931-032-e7d26e04\"],batchid)).start()\n",
+    "os.system(\"aws s3 sync '/tmp/results/{}/merge/merged/ 's3://sagemaker-eu-west-1-102554356212/results_merged/{}/masks/'\".format(batchid,batchid))\n",
+    "#merge masks from different inputs\n",
+    "keys = [obj.key for obj in s3results.objects.all() if ('results_merged' in obj.key and 'masks' in obj.key and batchid in obj.key)]\n",
+    "df = pd.DataFrame({'keys':keys,'orig_name':[k.split('/')[-1].split('__')[1].split('.jpg')[0] for k in keys]})\n",
+    "originals = np.unique(df['orig_name'].values)\n",
+    "for org in originals: \n",
+    "          merge_masks_diff_inputs(groupkeys = df['keys'].loc[df['orig_name']==org].values,batchid = batchid)\n",
+    "os.system(\"aws s3 sync '/tmp/results/{}/merge/merged/ 's3://sagemaker-eu-west-1-102554356212/results_merged/{}/masks/'\".format(batchid,batchid))"
    ]
   }
  ],
